--- a/package.json
+++ b/package.json
@@ -10,14 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/form-control": "^2.2.0",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
     "axios": "^1.6.7",
     "dotenv": "^16.4.5",
+    "framer-motion": "^11.0.8",
     "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-calendar": "^4.8.0",
     "react-daisyui": "^5.0.0",
     "react-datepicker": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.2",
+    "react-slick": "^0.30.2",
+    "semantic-ui-react": "^2.1.5",
+    "slick-carousel": "^1.8.1",
     "theme-change": "^2.5.0"
   },
   "devDependencies": {
