--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "axios": "^1.6.7",
+    "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.0.8",
     "moment": "^2.30.1",
