--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-daisyui": "^5.0.0",
     "react-datepicker": "^6.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.2",
     "react-slick": "^0.30.2",
     "semantic-ui-react": "^2.1.5",
